# nettlp-dpdk

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  build-debian.sh  configure.ac  upstream-exclude.txt
app/: Makefile.am  opensh-version-c.sh  opensh-version.sh  opensh-version.txt  opensh.c  opensh.h  opensh_ver.h  vty_server.c  vty_server.h  vty_shell.c  vtyd.c  vtyd.h
debian/: control  rules  sdplane.postrm.debhelper  sdplane.substvars
debian/sdplane/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
debian/sdplane/etc/sdplane/: 60-netplan-sdplane.yaml  iptables-rules.v4  iptables-rules.v6  sdplane.conf.sample  sshd_config
debian/sdplane/usr/lib/systemd/system/: sdplane.service
debian/sdplane/usr/sbin/: sdplane
debian/sdplane/usr/share/doc/sdplane/: README.Debian  copyright
doc/: install-memo-topton.txt  install-memo-v15.txt  install-memo.txt  nettlp-memo.txt
etc/: sdplane-nettlp.conf.sample  sdplane-partaker.service  sdplane-topton.service
lib/: Makefile.am  includes.h
lib/zcmdsh/: command.c  command.h  command_shell.c  command_shell.h  debug.c  debug.h  debug_backtrace.h  debug_category.h  debug_cmd.c  debug_cmd.h  debug_log.c  debug_log.h  debug_zcmdsh.c  debug_zcmdsh.h  file.c  file.h  flag.h  log.c  log.h  log_cmd.c  log_cmd.h  shell.c  shell.h  shell_fselect.c  shell_fselect.h  shell_keyfunc.c  shell_keyfunc.h  shell_telnet.c  shell_telnet.h  termio.c  termio.h  vector.c  vector.h
macos/: build-all.sh  build-arm64.sh  build-pkg-notarization.sh  build-pkg.sh  build-universal.sh  build-x86_64.sh  openshCommand.entitlements
module/l2fwd/: l2fwd.c  l2fwd.c.patch  l2fwd_cmd.c  l2fwd_cmd.h  l2fwd_export.h
module/l3fwd/: l3fwd.c  l3fwd.c.patch  l3fwd.h  l3fwd.h.patch  l3fwd_cmd.c  l3fwd_cmd.h  l3fwd_lpm.c.patch
sdplane/: Makefile.am  Makefile.dpdk  console_shell.c  debug_sdplane.c  debug_sdplane.h  dpdk_lcore_cmd.c  dpdk_port_cmd.c  include.h  internal_message.c  internal_message.h  l2_repeater.c  l2_repeater.h  log_packet.h  lthread_main.c  main.c  nettlp.c  nettlp.h  nettlp_support.c  nettlp_support.h  port-setup.sh  queue_config.c  queue_config.h  rib.c  rib.h  rib_manager.c  rib_manager.h  rte_override.h  run-l3fwd.sh  sdplane  sdplane-version-c.sh  sdplane-version.sh  sdplane.c  sdplane.h  sdplane_version.c  sdplane_version.h  snprintf_flags.c  snprintf_flags.h  startup_config.c  stat_collector.c  stat_collector.h  (+12 more)
style/: check_gnu_style.sh
